# bm-route-events

./: compose-dev.yml  docker-compose.yml  otel-collector-config.yaml  pyproject.toml  rabbitmq.conf  requirements.txt  setup.py
docs/: sups-only-update-implementation-plan.md
server/: app.py  rni_coordinate_check_deploy.py  rni_coordinate_check_start.py
src/dag/vcr/: __init__.py  capacity.py  fchs.py  fcpa.py  fcuk.py  pipeline.py  vcr.py
src/route_events/: __init__.py
src/route_events/bridge/: __init__.py  events.py
src/route_events/geometry/: __init__.py  point.py
src/route_events/photo/: __init__.py  photo.py  repo.py
src/route_events/points/: __init__.py  base.py
src/route_events/route/: __init__.py  lrs.py
src/route_events/schema/: __init__.py  base.py
src/route_events/segments/: __init__.py
src/route_events/utils/: __init__.py  generate_oid_function.sql  oid.py  ora_dtype_adapter.py
src/service/: __init__.py
src/service/bridge/: inventory_validation.py  master_validation.py  sups_type_criteria.py
src/service/photo/: client.py  gs.py
src/service/points/: __init__.py
src/service/segments/: __init__.py
src/service/validation_result/: msg.py  result.py
src/service/vcr/: __init__.py  c0.py  expr.py  fclj.py  pce.py  pipeline.py  rni.py  rni_spatial_query.py  rtc.py  sk_mapping.py  vcr.py
tests/domain/geometry/: test_point.py  test_points.py
tests/domain/lrs/: lambert_15010.parquet  lrs_15010.json  test_lrs_geometry.py  test_lrs_route.py
tests/domain/photo/: test_photo_repo.py
tests/domain/route_points/: defect_01001.xlsx  defect_010362.xlsx  test_route_defects.py  test_route_points.py  test_route_rtc.py
tests/domain/route_segments/: test_pci.py  test_pok.py  test_rni.py  test_roughness.py  test_route_segments.py
tests/service/: test_validation_result.py
tests/service/bridge_inventory_validation/: test_bridge_inventory_validation.py  test_inventory_data_1.json  test_popup_data.json
tests/service/bridge_master_validation/: test_bridge_master_validation.py  test_master_data.json
tests/service/kemantapan/: test_kemantapan_iri.py
tests/service/photo/: test_photo.py
tests/service/point_analysis/: test_segments_point_join.py  test_segments_point_join_fwd.py
tests/service/point_events_validation/: test_point_events_validation.py
validation-gateway/: go.mod  go.sum
validation-gateway/infra/: database.go
validation-gateway/internal/: config.go  token.go
validation-gateway/middleware/: authentication.go
worker/: Dockerfile  handler.py  logger.py  worker.py
(+194 files in other folders)
