[project]
name = "bm-route-events"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.14",
    "aiohttp-cors==0.8.0",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "attrs==25.3.0",
    "cachetools==5.5.2",
    "certifi==2024.8.30",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "colorful==0.5.6",
    "connectorx==0.4.0",
    "cryptography==44.0.0",
    "distlib==0.3.9",
    "duckdb==1.1.3",
    "fastapi==0.115.11",
    "fastexcel==0.12.0",
    "filelock==3.18.0",
    "frozenlist==1.5.0",
    "google-api-core==2.24.2",
    "google-auth==2.38.0",
    "google-cloud-core==2.4.3",
    "google-cloud-storage==3.1.0",
    "google-crc32c==1.7.1",
    "google-resumable-media==2.7.2",
    "googleapis-common-protos==1.69.2",
    "greenlet==3.1.1",
    "grpcio==1.68.1",
    "grpcio-tools==1.68.1",
    "h11==0.14.0",
    "httptools==0.6.4",
    "idna==3.10",
    "iniconfig==2.0.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "msgpack==1.1.0",
    "multidict==6.2.0",
    "numpy==2.1.3",
    "opencensus==0.11.4",
    "opencensus-context==0.1.3",
    "opentelemetry-api==1.37.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.37.0",
    "opentelemetry-sdk==1.37.0",
    "oracledb==2.5.1",
    "packaging==24.2",
    "pandas==2.2.3",
    "patito==0.8.3",
    "pika==1.3.2",
    "platformdirs==4.3.7",
    "pluggy==1.5.0",
    "polars==1.18.0",
    "prometheus-client==0.21.1",
    "propcache==0.3.0",
    "proto-plus==1.26.1",
    "protobuf==5.29.0",
    "py-spy==0.4.0",
    "pyarrow==18.1.0",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.1",
    "pycparser==2.22",
    "pydantic==2.10.5",
    "pydantic-core==2.27.2",
    "pytest==8.3.4",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "pytz==2024.2",
    "pyyaml==6.0.2",
    "ray==2.44.0",
    "referencing==0.36.2",
    "requests==2.32.3",
    "rpds-py==0.23.1",
    "rsa==4.9",
    "six==1.16.0",
    "smart-open==7.1.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.37",
    "starlette==0.46.1",
    "typing-extensions==4.12.2",
    "tzdata==2024.2",
    "urllib3==2.3.0",
    "uvicorn==0.34.0",
    "virtualenv==20.29.3",
    "watchfiles==1.0.4",
    "websockets==15.0.1",
    "wrapt==1.17.2",
    "xlsxwriter>=3.2.9",
    "yarl==1.18.3",
]
